<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="click"
            type="com.grandream.dagt.fragment.my.LoginPasswordSetFragment" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.grandream.dagt.ui.navigationLayout.NavigationLayout
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m130px_dp"
            android:background="@color/title_bg"
            android:paddingTop="@dimen/m30px_dp"
            app:na_title="@string/Log_Pwd_Set" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/m100px_dp"
            android:layout_marginLeft="@dimen/m60px_dp"
            android:layout_marginRight="@dimen/m60px_dp"
            android:layout_marginTop="@dimen/m100px_dp"
            android:background="@drawable/reset_pwd_border">

            <TextView
                android:id="@+id/old_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/m20px_dp"
                android:text="@string/old_pwd"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/old_pwd_ed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/old_pwd"
                android:background="@null"
                android:hint="@string/reset_input_pwd"
                android:inputType="textPassword" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/m100px_dp"
            android:layout_marginLeft="@dimen/m60px_dp"
            android:layout_marginRight="@dimen/m60px_dp"
            android:layout_marginTop="@dimen/m30px_dp"
            android:background="@drawable/reset_pwd_border">

            <TextView
                android:id="@+id/new_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/m20px_dp"
                android:text="@string/new_pwd"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/new_pwd_ed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/new_pwd"
                android:background="@null"
                android:hint="@string/reset_input_newpwd"
                android:inputType="textPassword" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/m100px_dp"
            android:layout_marginLeft="@dimen/m60px_dp"
            android:layout_marginRight="@dimen/m60px_dp"
            android:layout_marginTop="@dimen/m30px_dp"
            android:background="@drawable/reset_pwd_border">

            <TextView
                android:id="@+id/pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/m20px_dp"
                android:text="@string/confirm_pwd"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/pwd_ed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/pwd"
                android:background="@null"
                android:hint="@string/reset_inpit_confirm_pwd"
                android:inputType="textPassword" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/m100px_dp"
            android:layout_marginLeft="@dimen/m60px_dp"
            android:layout_marginRight="@dimen/m60px_dp"
            android:layout_marginTop="@dimen/m48px_dp"
            android:background="@drawable/loging_buttom_border"
            android:gravity="center"
            android:onClick="@{click.SaveClick}"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/m40px_dp" />


    </LinearLayout>
</layout>