<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="click"
            type="com.grandream.dagt.activity.MainActivity" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_base_bg">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1.0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#cccccc" />

            <LinearLayout
                android:id="@+id/layoutFooter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m120px_dp"
                android:background="@color/cF5F5F5"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <RadioGroup
                    android:id="@+id/group"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/home"
                        style="@style/main_footbar_radio"
                        android:drawableTop="@mipmap/menu_1_normal"
                        android:onClick="@{click.tohome}"
                        android:text="@string/home" />

                    <RadioButton
                        android:id="@+id/credit_manager"
                        style="@style/main_footbar_radio"
                        android:drawableTop="@mipmap/menu_2_normal"
                        android:onClick="@{click.tocreditmanager}"
                        android:text="@string/credit_management" />

                    <RadioButton
                        android:id="@+id/wallet"
                        style="@style/main_footbar_radio"
                        android:drawableTop="@mipmap/menu_3_normal"
                        android:onClick="@{click.towallet}"
                        android:text="@string/wallet" />

                    <RadioButton
                        android:id="@+id/me"
                        style="@style/main_footbar_radio"
                        android:drawableTop="@mipmap/menu_4_normal"
                        android:onClick="@{click.tome}"
                        android:text="@string/my" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</layout>