<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="click"
            type="com.grandream.dagt.fragment.my.gesture.CreateGestureActivity" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_base_bg"
        android:orientation="vertical">

        <com.grandream.dagt.ui.navigationLayout.NavigationLayout
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m130px_dp"
            android:background="@color/title_bg"
            android:paddingTop="@dimen/m30px_dp"
            app:na_title="@string/gesture" />


        <TextView
            android:id="@+id/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/m50px_dp"
            android:textSize="@dimen/m30px_dp" />

        <com.grandream.dagt.ui.lockpattern.LockPatternIndicator
            android:id="@+id/lockPatterIndicator"
            android:layout_width="@dimen/m60px_dp"
            android:layout_height="@dimen/m60px_dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/m40px_dp"
            android:layout_marginTop="@dimen/m30px_dp" />

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/m30px_dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/m40px_dp"
            android:orientation="vertical">

            <com.grandream.dagt.ui.lockpattern.LockPatternView
                android:id="@+id/lockPatternView"
                android:layout_width="@dimen/m560px_dp"
                android:layout_height="@dimen/m560px_dp" />

            <Button
                android:id="@+id/resetBtn"
                android:onClick="@{click.resetLockPattern}"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m80px_dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/m20px_dp"
                android:background="@drawable/layout_grey_bg"
                android:text="@string/create_gesture_reset"
                android:textColor="@color/grey_b2b2b2"
                android:textSize="@dimen/m32px_dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/messageTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/m20px_dp"
            android:text="@string/create_gesture_default"
            android:textColor="@color/grey_b2b2b2"
            android:textSize="@dimen/m32px_dp" />


    </LinearLayout>
</layout>