<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="click"
            type="com.grandream.dagt.fragment.my.MyDetailFragment" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/m200px_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/m20px_dp"
                android:layout_marginLeft="@dimen/m30px_dp"
                android:onClick="@{click.Loging}"
                android:text="@string/My_title"
                android:textColor="@color/black"
                android:textSize="@dimen/m50px_dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/m30px_dp"
                android:layout_marginRight="@dimen/m30px_dp"
                android:layout_toLeftOf="@+id/user_img"
                android:textColor="@color/black"
                android:textSize="@dimen/m36px_dp" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/user_img"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/m30px_dp"
                app:civ_border_color="@android:color/transparent"
                android:src="@mipmap/avatar_default"
                app:civ_border_width="1dp"
                app:civ_shadow="false"
                android:onClick="@{click.chooseImg}"
                app:civ_shadow_color="#8BC34A"
                app:civ_shadow_radius="10" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/m120px_dp"
            android:layout_marginTop="@dimen/m20px_dp"
            android:onClick="@{click.Sys_setting_Click}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/m40px_dp"
                android:drawableLeft="@mipmap/me_2"
                android:drawablePadding="@dimen/m30px_dp"
                android:text="@string/Sys_Set"
                android:textColor="@color/black"
                android:textSize="@dimen/m36px_dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/m30px_dp"
                android:background="@mipmap/item_arrow_right" />
        </RelativeLayout>

        <View style="@style/w_line_fill_left100dp_30right" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/m120px_dp"
            android:onClick="@{click.Take_Coin_Address_Click}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/m40px_dp"
                android:drawableLeft="@mipmap/me_3"
                android:drawablePadding="@dimen/m30px_dp"
                android:text="@string/Take_Coin_Address_Managerial"
                android:textColor="@color/black"
                android:textSize="@dimen/m36px_dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/m30px_dp"
                android:background="@mipmap/item_arrow_right" />
        </RelativeLayout>

        <View style="@style/w_line_fill_left100dp_30right" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/m120px_dp"
            android:onClick="@{click.Common_Problem_Click}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/m40px_dp"
                android:drawableLeft="@mipmap/me_4"
                android:drawablePadding="@dimen/m30px_dp"
                android:text="@string/FAQ"
                android:textColor="@color/black"
                android:textSize="@dimen/m36px_dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/m30px_dp"
                android:background="@mipmap/item_arrow_right" />
        </RelativeLayout>

        <View style="@style/w_line_fill_left100dp_30right" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/m120px_dp"
            android:onClick="@{click.Len_Institutions_Click}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/m40px_dp"
                android:drawableLeft="@mipmap/me_5"
                android:drawablePadding="@dimen/m30px_dp"
                android:text="@string/Lending_Institution"
                android:textColor="@color/black"
                android:textSize="@dimen/m36px_dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/m30px_dp"
                android:background="@mipmap/item_arrow_right" />
        </RelativeLayout>

        <View style="@style/w_line_fill_left100dp_30right" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/m120px_dp"
            android:onClick="@{click.About_Us_Click}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/m40px_dp"
                android:drawableLeft="@mipmap/me_6"
                android:drawablePadding="@dimen/m30px_dp"
                android:text="@string/About_Us"
                android:textColor="@color/black"
                android:textSize="@dimen/m36px_dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/m30px_dp"
                android:background="@mipmap/item_arrow_right" />
        </RelativeLayout>
    </LinearLayout>
</layout>